--- a/mviframework/config.gradle
+++ b/mviframework/config.gradle
@@ -13,4 +13,54 @@ ext {
             javaSDKVersion: JavaVersion.VERSION_17,
             jvmTarget     : 17,
     ]
+
+    libVersions = [
+            //图片加载
+            glideVersion               : "4.15.1",
+            glideTransformationsVersion: "4.2.0",
+            //屏幕适配
+            androidAutoSizeVersion     : "v1.2.1",
+            //工具类
+            RxToolRxKitVersion         : "2.6.3",
+            //Lottie动画
+            lottieVersion              : "6.1.0",
+            //沉浸式状态栏 非AndroidX 3.1.1以上版本无需混淆
+            immersionbarVersion        : "3.2.2",
+            //高效的任意位置弹窗方案
+            layerVersion               : "1.0.5",
+            //权限申请
+            XXPermissionsVersion       : "16.2",
+            //路由
+            arouterApiVersion          : "1.5.2",
+            arouterCompilerVersion     : "1.5.2",
+            //数据库
+            roomVersion                : "2.4.3",
+    ]
+
+    dependencies = [
+            //图片加载
+            "bumptech-glide-glide"          : "com.github.bumptech.glide:glide:${libVersions["glideVersion"]}",
+            "bumptech-glide-recyclerview"   : "com.github.bumptech.glide:recyclerview-integration:${libVersions["glideVersion"]}",
+            "bumptech-glide-compiler"       : "com.github.bumptech.glide:compiler:${libVersions["glideVersion"]}",
+            "glide-transformations"         : "jp.wasabeef:glide-transformations:${libVersions["glideTransformationsVersion"]}",
+            //屏幕适配
+            androidAutoSize: "com.github.JessYanCoding:AndroidAutoSize:${libVersions.androidAutoSizeVersion}",
+            //工具类
+            RxToolRxKit    : "com.github.tamsiree.RxTool:RxKit:${libVersions["RxToolRxKitVersion"]}",
+            //Lottie动画
+            lottie         : "com.airbnb.android:lottie:${libVersions.lottieVersion}",
+            //沉浸式状态栏
+            immersionbar   : "com.geyifeng.immersionbar:immersionbar:${libVersions.immersionbarVersion}",
+            //高效的任意位置弹窗方案
+            layer          : "com.github.JessYanCoding:Layer:${libVersions.layerVersion}",
+            //权限申请
+            XXPermissions  : "com.github.getActivity:XXPermissions:${libVersions["XXPermissionsVersion"]}",
+            //路由
+            arouterApi     : "com.alibaba:arouter-api:${libVersions["arouterApiVersion"]}",
+            arouterCompiler: "com.alibaba:arouter-compiler:${libVersions["arouterCompilerVersion"]}",
+            //数据库
+            roomRuntime    : "androidx.room:room-runtime:${libVersions["roomVersion"]}",
+            roomCompiler   : "androidx.room:room-compiler:${libVersions["roomVersion"]}",
+    ]
+
 }
