--- a/mviframework/build.gradle
+++ b/mviframework/build.gradle
@@ -62,9 +62,15 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.databinding:viewbinding:8.5.1'
+    implementation 'androidx.startup:startup-runtime:1.1.1'
+    implementation 'com.github.DylanCaiCoding.Longan:longan:1.1.1'
+    // Optional
+    implementation 'com.github.DylanCaiCoding.Longan:longan-design:1.1.1'
 
+//    api dependenciesroot["okio"]
     api dependenciesroot["viewbinding-ktx"]
     api dependenciesroot["viewbinding-nonreflection"]
     api dependenciesroot["viewbinding-base"]
     api dependenciesroot["viewbinding-brvah"]
+
 }
