--- a/mviframework/build.gradle
+++ b/mviframework/build.gradle
@@ -58,14 +58,14 @@ publishing {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.13.1'
-    implementation 'androidx.appcompat:appcompat:1.7.0'
-    implementation 'com.google.android.material:material:1.12.0'
-    implementation 'androidx.databinding:viewbinding:8.5.1'
-    implementation 'androidx.startup:startup-runtime:1.1.1'
-    implementation 'com.github.DylanCaiCoding.Longan:longan:1.1.1'
+    api 'androidx.core:core-ktx:1.13.1'
+    api 'androidx.appcompat:appcompat:1.7.0'
+    api 'com.google.android.material:material:1.12.0'
+    api 'androidx.databinding:viewbinding:8.5.1'
+    api 'androidx.startup:startup-runtime:1.1.1'
+    api 'com.github.DylanCaiCoding.Longan:longan:1.1.1'
     // Optional
-    implementation 'com.github.DylanCaiCoding.Longan:longan-design:1.1.1'
+    api 'com.github.DylanCaiCoding.Longan:longan-design:1.1.1'
 
 //    api dependenciesroot["okio"]
     api dependenciesroot["viewbinding-ktx"]
