--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,5 +55,5 @@ dependencies {
     implementation project(':mviframework')
 
 
-    implementation 'com.github.zxy-hunan:AFrameworkMVI:1.0.5'
+//    implementation 'com.github.zxy-hunan:AFrameworkMVI:1.0.5'
 }
