--- a/mviframework/build.gradle
+++ b/mviframework/build.gradle
@@ -84,6 +84,8 @@ dependencies {
     api 'com.blankj:utilcodex:1.31.1'
     //network end
 
+    api dependenciesroot["androidAutoSize"]
+
 
 //    api dependenciesroot["okio"]
     api dependenciesroot["viewbinding-ktx"]
