--- a/mviframework/build.gradle
+++ b/mviframework/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
     id 'maven-publish'
 }
 
@@ -15,6 +16,13 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+
+        /*kapt {
+            //Arouter路由配置
+            arguments {
+                arg("AROUTER_MODULE_NAME", project.getName())
+            }
+        }*/
     }
 
     publishing {
@@ -86,6 +94,8 @@ dependencies {
     //LoadingStateView 是一个深度解耦缺省页和标题栏的工具
     api 'com.github.DylanCaiCoding.LoadingStateView:loadingstateview-ktx:4.1.0'
 
+    api 'com.squareup.retrofit2:converter-gson:2.0.2'
+
     //network end
 
     api dependenciesroot["androidAutoSize"]
@@ -104,5 +114,8 @@ dependencies {
     api dependenciesroot["liangjingkanji"]
     api dependenciesroot["refresh-header-classics"]
     api dependenciesroot["refresh-header-two-level"]
+
+//    api dependenciesroot["arouterApi"]
+//    kapt dependenciesroot["arouterCompiler"]
 
 }
