--- a/mviframework/build.gradle
+++ b/mviframework/build.gradle
@@ -17,12 +17,12 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
 
-        /*kapt {
+        kapt {
             //Arouter路由配置
             arguments {
                 arg("AROUTER_MODULE_NAME", project.getName())
             }
-        }*/
+        }
     }
 
     publishing {
@@ -88,16 +88,23 @@ dependencies {
     api("com.squareup.okhttp3:logging-interceptor")
 
     api 'com.google.code.gson:gson:2.10'
+    api 'com.squareup.retrofit2:converter-gson:2.0.2'
 
+    //工具
     api 'com.blankj:utilcodex:1.31.1'
 
     //LoadingStateView 是一个深度解耦缺省页和标题栏的工具
     api 'com.github.DylanCaiCoding.LoadingStateView:loadingstateview-ktx:4.1.0'
 
-    api 'com.squareup.retrofit2:converter-gson:2.0.2'
-
     //network end
+    //底部导航栏
+    implementation 'me.majiajie:pager-bottom-tab-strip:2.4.0'
+    //动画
+    implementation 'com.daimajia.androidanimations:library:2.4@aar'
+    //图片压缩
+    implementation 'com.github.forJrking:KLuban:1.1.0'
 
+    //屏幕适配
     api dependenciesroot["androidAutoSize"]
 
 
@@ -114,8 +121,17 @@ dependencies {
     api dependenciesroot["liangjingkanji"]
     api dependenciesroot["refresh-header-classics"]
     api dependenciesroot["refresh-header-two-level"]
+    //shapeview
+    api dependenciesroot["ShapeView"]
 
-//    api dependenciesroot["arouterApi"]
-//    kapt dependenciesroot["arouterCompiler"]
+    //https://github.com/getActivity/XXPermissions
+    api dependenciesroot["XXPermissions"]
+
+    //沉浸式
+    api dependenciesroot["immersionbar"]
+    api dependenciesroot["immersionbar-ktx"]
+
+    api dependenciesroot["arouterApi"]
+    kapt dependenciesroot["arouterCompiler"]
 
 }
